# mlopal

./: .dir-locals.el  .gitignore  .local.vimrc  CMakeLists.txt  Doxyfile.in  LICENSE
optimizer/: CMakeLists.txt
optimizer/Comm/: CommSplitter.h  MasterNode.h  types.h
optimizer/Expression/: CMakeLists.txt  Expression.h  FromFile.cpp  FromFile.h  GlobalFunctions.h  MaxNormRadialPeak.cpp  MaxNormRadialPeak.h  NumberOfPeaks.cpp  NumberOfPeaks.h  ProbeVariable.h  PythonExpr.h  RadialPeak.h  SDDSVariable.h  SeptumExpr.h  SumErrSq.h  SumErrSqRadialPeak.cpp  SumErrSqRadialPeak.h
optimizer/Optimizer/: Optimizer.h
optimizer/Pilot/: Pilot.h  Poller.h  Worker.h
optimizer/Simulation/: GenerateOpalSimulation.h  Simulation.h
optimizer/Tests/: CMakeLists.txt  CmdArgumentsTest.cpp  ExpressionTest.cpp  FromFileExpressionTest.cpp  HashNameGeneratorTest.cpp  IndividualTest.cpp  MPIHelperTest.cpp  ManagedIDsTest.cpp  PopulationTest.cpp  PythonExprTest.cpp  SDDSParserTest.cpp  SumErrSqExpressionTest.cpp
optimizer/Util/: AsyncSendBuffers.h  CMakeLists.txt  CmdArguments.cpp  CmdArguments.h  MPIHelper.cpp  MPIHelper.h  ManagedIDs.h  NativeHashGenerator.h  OptPilotException.h  PeakReader.cpp  PeakReader.h  ProbeHistReader.cpp  ProbeHistReader.h  ProbeReader.cpp  ProbeReader.h  SDDSParser.cpp  SDDSParser.h  Statistics.h  Types.h
optimizer/extlib/: CMakeLists.txt
src/: CMakeLists.txt  Main.cpp  addToDoxygenMainPage.h  config.h.in  opal.cpp  opal.h
src/AbstractObjects/: Attribute.cpp  Attribute.h  AttributeBase.cpp  AttributeHandler.cpp  AttributeHandler.h  CMakeLists.txt  Directory.cpp  Directory.h  Element.h  Expressions.h  Object.cpp  Object.h  OpalData.cpp  OpalData.h
src/Algorithms/: CMakeLists.txt  CavityAutophaser.cpp  CavityAutophaser.h  Ctunes.cpp  Hamiltonian.cpp  Hamiltonian.h  IndexMap.cpp  MapAnalyser.cpp  MapAnalyser.h  MultiBunchHandler.cpp  MultiBunchHandler.h  OrbitThreader.cpp  OrbitThreader.h  ParallelCyclotronTracker.cpp  ParallelCyclotronTracker.h  ParallelTTracker.cpp  ParallelTTracker.h  StepSizeConfig.cpp  StepSizeConfig.h  ThickTracker.cpp  ThickTracker.h  lomb.cpp  lomb.h
src/Amr/: AbstractAmrWriter.h  AmrBoxLib.cpp  AmrBoxLib.h  AmrDefs.h  AmrObject.cpp  AmrObject.h  AmrYtWriter.cpp  AmrYtWriter.h  BoxLibLayout.h  BoxLibLayout.hpp  BoxLibParticle.h  BoxLibParticle.hpp  CMakeLists.txt
src/Attributes/: Attributes.cpp  Attributes.h  CMakeLists.txt  String.cpp
src/BasicActions/: CMakeLists.txt  Call.cpp  DumpEMFields.cpp  DumpEMFields.h  DumpFields.cpp  Echo.cpp  Help.cpp  Option.cpp  Option.h  PSystem.cpp  Select.cpp  System.cpp  Value.cpp
src/Classic/: CMakeLists.txt
src/Distribution/: CMakeLists.txt  ClosedOrbitFinder.h  Distribution.cpp  Distribution.h  LaserProfile.cpp  LaserProfile.h  RealDiracMatrix.cpp  RealDiracMatrix.h  SigmaGenerator.cpp  SigmaGenerator.h  matrix_vector_operation.h
src/Elements/: CMakeLists.txt  OpalAsymmetricEnge.cpp  OpalAsymmetricEnge.h  OpalBeamline.cpp  OpalBeamline.h  OpalBend.cpp  OpalBend.h  OpalCCollimator.cpp  OpalCCollimator.h  OpalCavity.cpp  OpalCavity.h  OpalCyclotron.cpp  OpalCyclotron.h  OpalDegrader.cpp  OpalDegrader.h  OpalDrift.cpp  OpalDrift.h  OpalECollimator.cpp  OpalECollimator.h  OpalElement.cpp  OpalElement.h  OpalEnge.cpp  OpalEnge.h  OpalFlexibleCollimator.cpp  OpalFlexibleCollimator.h  OpalHKicker.cpp  OpalHKicker.h  OpalKicker.cpp  OpalKicker.h  OpalMarker.cpp  OpalMultipole.cpp  OpalMultipoleTCurvedConstRadius.cpp  OpalMultipoleTCurvedConstRadius.h  OpalMultipoleTCurvedVarRadius.cpp  OpalMultipoleTCurvedVarRadius.h  OpalMultipoleTStraight.cpp  OpalMultipoleTStraight.h  OpalOctupole.cpp  OpalOctupole.h  OpalPepperPot.cpp  (+43 more)
src/Expressions/: CMakeLists.txt  Expressions.cpp
src/Lines/: CMakeLists.txt  Line.cpp  Line.h  LineTemplate.cpp  Sequence.cpp  Sequence.h  SequenceMember.h  SequenceParser.cpp  SequenceTemplate.cpp  SequenceTemplate.h
src/OpalConfigure/: CMakeLists.txt  Configure.cpp
src/OpalParser/: CMakeLists.txt  IfStatement.cpp  MacroCmd.cpp  MacroCmd.h  OpalParser.cpp  WhileStatement.cpp
src/Optimize/: CMakeLists.txt  OpalSimulation.cpp  OpalSimulation.h  OptimizeCmd.cpp  OptimizeCmd.h
src/PyOpal/: CMakeLists.txt  find_install_location.py
src/Sample/: CMakeLists.txt  FromFile.h  LatinHyperCube.h  Normal.h  OpalSample.cpp  OpalSample.h  RNGStream.cpp  RNGStream.h  SampleCmd.cpp  SampleCmd.h  SampleGaussianSequence.h  SampleIndividual.h  SamplePilot.h  SampleRandomizedSequence.h  SampleSequence.h  SampleWorker.h  Sampler.cpp  Sampler.h  SamplingMethod.h  Uniform.h
src/Solvers/: AmrPoissonSolver.h  ArbitraryDomain.cpp  ArbitraryDomain.h  BoxCornerDomain.cpp  BoxCornerDomain.h  CMakeLists.txt  EllipticDomain.cpp  EllipticDomain.h  FFTBoxPoissonSolver.h  FFTPoissonSolver.cpp  FFTPoissonSolver.h  IrregularDomain.cpp  IrregularDomain.h  MGPoissonSolver.cpp  MGPoissonSolver.h  P3MPoissonSolver.cpp  P3MPoissonSolver.h  PoissonSolver.h  RectangularDomain.cpp  RectangularDomain.h  RegularDomain.cpp  RegularDomain.h
src/Steppers/: BorisPusher.h  CMakeLists.txt  LF2.h  LF2.hpp  RK4.h  RK4.hpp  Stepper.h
src/Structure/: Beam.cpp  Beam.h  BoundaryGeometry.cpp  BoundaryGeometry.h  CMakeLists.txt  DataSink.cpp  DataSink.h  ElementPositionWriter.cpp  FieldSolver.cpp  FieldSolver.h  FieldWriter.hpp  GridLBalWriter.cpp  GridLBalWriter.h  H5PartWrapper.cpp  H5PartWrapper.h  H5PartWrapperForPC.cpp  H5PartWrapperForPC.h  H5PartWrapperForPT.cpp  H5PartWrapperForPT.h  H5Writer.cpp  H5Writer.h  IpplInfoWrapper.cpp  IpplInfoWrapper.h  LBalWriter.cpp  LBalWriter.h  MemoryProfiler.cpp  MemoryProfiler.h  MemoryWriter.cpp  MemoryWriter.h  MonitorStatisticsWriter.cpp  MultiBunchDump.cpp  MultiBunchDump.h  OpalWake.cpp  OpalWake.h  ParticleMatterInteraction.cpp  ParticleMatterInteraction.h  SDDSColumn.cpp  SDDSColumn.h  SDDSColumnSet.h  SDDSWriter.cpp  (+4 more)
src/Tables/: CMakeLists.txt
src/Track/: CMakeLists.txt  Track.cpp  Track.h  TrackCmd.cpp  TrackCmd.h  TrackRun.cpp  TrackRun.h
src/Utilities/: CMakeLists.txt  OpalFilter.cpp
src/ValueDefinitions/: CMakeLists.txt  (+2 more)
tools/: CMakeLists.txt  README
(+755 files in other folders)
